[tool.poetry]
name = "explora-display"
version = "0.2.3"
description = ""
authors = ["Bruno Laurencich <bruno@chordata.cc>", "guiltyfeet <lorenzomf@eml.cc>"]
readme = "README.md"
packages = [{include = "explora", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
pydantic-core = "2.16.2"
fastapi = {extras = ["all"], version = "^0.110.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[[tool.poetry.source]]
name = "piwheels"
url = "https://www.piwheels.org/simple"
priority = "supplemental"
